# hive-colony

./: Cargo.toml  Dockerfile  PLAYBOOK.md  README.md  build_env.sh  colmena.toml  docker-compose.yml  hive.sh  hive.toml  hive_test.sh  setup_cross.sh
.cargo/: config.toml
.github/workflows/: ci.yml
Mejoras/: 1 Mejoras.txt  2 Mejoras.txt  3 Mejoras.txt  4 Mejoras.txt  Documentacion General.txt  Implementaciones.txt
agents/drone/src/: main.rs
agents/honeybee/: Cargo.toml
agents/honeybee/src/: main.rs
agents/queen/src/: main.rs
agents/swarm/src/: main.rs
agents/weaver/src/: main.rs
agents/worker/: build.rs
agents/worker/models/: scout_classifier.json
agents/worker/src/: main.rs
beekeeper/src/: main.rs
buzz/src/: main.rs
docker/lab/: Dockerfile.ssh-target  authorized_keys  docker-compose.lab.yml
docs/: AGENTS.md  Actualizacion.md  DEPLOYMENT.md  Debate.md  Diseño.md  Docs.md  Final.md  OPERATOR_GUIDE.md  README.md  Swarm.md
hive_base/: Cargo.toml
hive_base/benches/: htl_throughput.rs  ipc_validation.rs
hive_base/fuzz/: Cargo.toml
hive_base/fuzz/fuzz_targets/: ipc_contract_validate.rs  ring_buffer_ops.rs
hive_base/src/: arena_mgr.rs  c2_bridge.rs  c2_channels.rs  channel_rotator.rs  chaos.rs  chrononaut.rs  comms.rs  consensus.rs  death_dance.rs  did.rs  ephemeral.rs  exfil.rs  exploits.rs  federation.rs  guardian.rs  hades_gate.rs  hibernation.rs  hive_scale.rs  hivemind.rs  homomorphic.rs  honeycomb.rs  identity.rs  io_uring_ops.rs  ipc_contract.rs  larva.rs  lateral.rs  ldc.rs  leech.rs  lib.rs  lolbin.rs  marl_online.rs  ml.rs  nectar.rs  panal.rs  pheromone.rs  phoenix.rs  privesc.rs  propaganda.rs  reactive_llm.rs  royal_jelly.rs  (+14 more)
hive_base/tests/: edr_sandbox.rs  phase_a_integration.rs
scripts/: deploy.sh  lab_setup.sh  obfuscate_pe.py  test_ssh_propagation.sh
stinger/src/: main.rs
tests/: hive_colony_verify.sh
