[workspace]
resolver = "2"
members = [
    "hive_base",
    "agents/worker",
    "agents/drone",
    "agents/honeybee",
    "agents/weaver",
    "agents/queen",
    "agents/swarm",
    "stinger",
    "beekeeper",
    "buzz",
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
