[package]
name = "honeybee"
version = "0.1.0"
edition = "2021"

[dependencies]
hive_base = { path = "../../hive_base" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
aes-gcm = "0.10"
rand = "0.8"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.10"
